# jigsaw_Puzzle_Roboter

./: README.md
piecePilot_v2/: CMakeLists.txt  Dokumentation.odt
piecePilot_v2/src/: AppController.cpp  AppController.h  Board.cpp  Board.h  EdgeMatch.h  EdgePoint.h  Helpers.h  PieceEdgeProfile.h  Placement.h  SquareFinder.cpp  SquareFinder.h  pieceInfo.h  pieceScan.cpp  pieceScan.h
piecePilot_v2/src/gui/: MainWindow.cpp  MainWindow.h  edgeMatchPage.cpp  edgeMatchPage.h  plotWidget.cpp  plotWidget.h  sortGridPage.cpp  sortGridPage.h
